apps/velocita-news/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velocita-news
  namespace: default
  labels:
    app.kubernetes.io/name: velocita-news

spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: velocita-news
  template:
    metadata:
      labels:
        app.kubernetes.io/name: velocita-news
    spec:

      imagePullSecrets:
        - name: regcred

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/server-usage
                    operator: DoesNotExist

      containers:
        - name: velocita-news
          image: "margarinas/velocita-news:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /up
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
