apps/velocita-news/horizon.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velocita-news-horizon
  namespace: default
  labels:
    app.kubernetes.io/name: velocita-news-horizon
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: velocita-news-horizon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: velocita-news-horizon
    spec:
      imagePullSecrets:
        - name: regcred

      containers:
        - name: velocita-news-horizon

          image: "margarinas/velocita-news:latest"
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - "php artisan horizon"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app.kubernetes.io/instance"
                    operator: In
                    values:
                      - velocita-news-horizon
              topologyKey: "kubernetes.io/hostname"
