apps/velocita-news/queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velocita-news-queue
  namespace: default
  labels:
    app: velocita-news-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: velocita-news-queue
  template:
    metadata:
      name: velocita-news-queue
      labels:
        app: velocita-news-queue
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: velocita-news
        - secretRef:
            name: velocita-news
        image: margarinas/velocita-news:release
        imagePullPolicy: Always
        name: velocita-news-queue
        command:
        - php
        - /var/www/html/artisan
        - queue:work
        - --tries=3
        - --max-jobs=500
        - --memory=256
        - --timeout=180
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"

        livenessProbe:
          exec:
            command: ["healthcheck-queue"]
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3

      imagePullSecrets:
      - name: regcred
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/server-usage
                    operator: DoesNotExist
