apps/velocita-news/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velocita-news
  namespace: default
  labels:
    app.kubernetes.io/name: velocita-news
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "news.motorsniper.lt"
      secretName: tls-velocita-news
  rules:
    - host: "news.motorsniper.lt"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: velocita-news
                port:
                  number: 8080
